[gd_scene load_steps=3 format=2]

[ext_resource path="res://src/Scripts/BG.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]

[node name="Transition" type="Node2D"]
visible = false
light_mask = 0
z_index = 1000
z_as_relative = false
script = ExtResource( 1 )

[node name="BlackScreen" type="Sprite" parent="."]
modulate = Color( 0, 0, 0, 1 )
light_mask = 0
position = Vector2( 904.716, 524.107 )
scale = Vector2( 2508.56, 2830.28 )
texture = ExtResource( 2 )

[node name="FadeOut" type="Tween" parent="."]
playback_speed = 0.5
playback/speed = 0.5

[node name="FadeIn" type="Tween" parent="."]
